<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/raisin_black"
    tools:context=".SettingsActivity">

    <!-- Main Content Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/raisin_black">

        <!-- Navigation Drawer Toggle Button -->
        <ImageButton
            android:id="@+id/ButtonNavToggle"
            android:layout_width="65dp"
            android:layout_height="61dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Toggle side nav"
            android:src="@android:drawable/ic_menu_sort_by_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Text Size Slider -->
        <TextView
            android:id="@+id/textSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Text Size"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <SeekBar
            android:id="@+id/textSizeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mint"
            android:max="100"
            android:progress="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSizeLabel" />

        <!-- Background Color -->
        <TextView
            android:id="@+id/backgroundColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Book_Background_Color_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSizeSeekBar" />

        <EditText
            android:id="@+id/backgroundColorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="#FFFFFF"
            android:inputType="text"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backgroundColorLabel" />

        <TextView
            android:id="@+id/colorPreview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:text="Book Background Preview"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backgroundColorEditText" />

        <!-- Text Color -->
        <TextView
            android:id="@+id/textColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Text_Color_string"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colorPreview" />

        <EditText
            android:id="@+id/textColorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="#000000"
            android:inputType="text"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textColorLabel" />

        <TextView
            android:id="@+id/textColorPreview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="#000000"
            android:text="Text Color Preview"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textColorEditText" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/Read_Settings_string"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/raisin_black"
        app:headerLayout="@layout/header"
        app:itemTextColor="@color/white"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
